--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,8 @@
   <modules>
     <module>spring-base</module>
   </modules>
-  
+  <properties>
+  	<java.version>1.8</java.version>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
