--- a/spring-base/pom.xml
+++ b/spring-base/pom.xml
@@ -10,6 +10,7 @@
   <artifactId>spring-base</artifactId>
   <name>spring-base</name>
   <url>http://maven.apache.org</url>
+  <packaging>war</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
